--- a/mfg.html
+++ b/mfg.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AOT</title>
+    <link rel="stylesheet" href="/Styles/stl.css">
 </head>
 <body>
     <h2>
@@ -16,7 +17,11 @@
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem, vitae! Maxime quidem quisquam, nisi voluptatem doloremque provident debitis enim itaque. Quae voluptas in consequatur quidem magnam maiores pariatur sequi inventore?
     </p>
     <p>
+        2nd Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus quas blanditiis asperiores eligendi nemo, veniam totam nobis, temporibus officia magnam sapiente velit unde esse atque aut eius dolorem porro dignissimos.
+    </p>
+    <p>
+        3rd Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, quae temporibus? Numquam, iure iste labore eveniet magni voluptatum laudantium consectetur doloremque, nihil nisi tempora quo architecto molestiae rerum, fuga ex?
+    </p>
 
-    </p>2nd Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dignissimos ipsum accusantium, enim reprehenderit eveniet necessitatibus earum, provident, facilis animi delectus possimus incidunt voluptatum quam excepturi veritatis voluptate fugiat error!
 </body>
 </html>
